--- a/TuristikApp.Main/appsettings.json
+++ b/TuristikApp.Main/appsettings.json
@@ -1,4 +1,8 @@
 {
+  //Cambiar el valor de Data Source si estas en un nuevo dispositivo
+  "ConnectionStrings": {
+    "SQLConnection": "Data Source=DESKTOP-GJLQ89T;Initial Catalog=TuristikDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
